# uptimer-cli

./: README.md
uptimer/: pyproject.toml
uptimer/source/: api.rst  conf.py  index.rst
uptimer/source/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
uptimer/source/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree
uptimer/source/_build/html/_sources/: index.rst.txt
uptimer/tests/: test_uptimer.py
uptimer/uptimer/: uptimer.py
